--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ set(CMAKE_CXX_STANDARD 17)
 file(GLOB_RECURSE source_files "src/*.cpp")
 file(GLOB_RECURSE source_lib "lib/*.cpp")
 add_compile_options(-g -std=c++17 -O2)
-include_directories(src/4)
-include_directories(src/3)
-include_directories(src/2)
-include_directories(src/1)
+include_directories(src/Line)
+include_directories(src/Station)
+include_directories(src/StringHelper)
+include_directories(src/Timing)
 add_executable(TPF2-Timetables-Helper ${source_files} ${source_lib})
