--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,6 @@ add_compile_options(-g -std=c++17 -O2)
 include_directories(src/Line)
 include_directories(src/Station)
 include_directories(src/StringHelper)
+include_directories(src/TimeTable)
 include_directories(src/Timing)
 add_executable(TPF2-Timetables-Helper ${source_files} ${source_lib})
