--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ file(GLOB_RECURSE source_files "src/*.cpp")
 file(GLOB_RECURSE source_lib "lib/*.cpp")
 add_compile_options(-g -std=c++17 -O2)
 include_directories(src/Line)
+include_directories(src/LuaIO)
 include_directories(src/Station)
 include_directories(src/StringHelper)
 include_directories(src/TimeTable)
